base-kustomize/gateway/nginx-gateway-fabric/internal-gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: flex-gateway
  namespace: nginx-gateway
  annotations: # This is the name of the ClusterIssuer created in the previous step
    cert-manager.io/cluster-issuer: public-endpoint-issuer
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  gatewayClassName: nginx
  listeners:
  - name: cluster-http
    port: 80
    protocol: HTTP
    hostname: "*.cluster.local"
    allowedRoutes:
      namespaces:
        from: All
  - name: cluster-tls
    port: 443
    protocol: HTTPS
    hostname: "*.cluster.local"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: wildcard-cluster-tls-secret
