base-kustomize/gateway/nginx-gateway-fabric/prometheus-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-gateway-route
  namespace: prometheus
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: http
    namespace: nginx-gateway
  hostnames:
  - "prometheus.your.domain.tld"
  rules:
    - backendRefs:
      - name: kube-prometheus-stack-prometheus
        port: 9090
